--- a/kode-intership-2025-react/index.html
+++ b/kode-intership-2025-react/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="google"
+      content="notranslate"
+    />
     <link
       rel="icon"
       href="/favicon-16x16.svg"
